# oracle-implementation

./: .gitignore  README.md
contracts/script/: Oracle.s.sol
contracts/src/: Oracle.sol
contracts/test/: Oracle.t.sol
oracle/: .gitignore  Cargo.toml
oracle-node/: .gitignore  Cargo.toml
oracle-node/src/: main.rs
