[package]
name = "oracle-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
ethers = { version = "2.0", features = ["rustls"] }
